# generator

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: aqhcr0kv7d91rfm0ca77rbakjk5gkbq6-source
.github/workflows/: test.yml
src/: lib.rs  load.rs  main.rs  prelude.rs
