[package]
name = "generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/xinux-org/generator"
repository = "https://github.com/xinux-org/generator"
authors = [
  "Sokhibjon Orzikulov <sakhib@orzklv.uz>",
  "Victor Fuentes <vlinkz@snowflakeos.org>",
]


[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "brotli"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
csv = "1.2"

[profile.release]
codegen-units = 1
incremental = true
lto = true
strip = true
opt-level = "z"
